--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,7 +3,77 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93be4298",
+   "id": "4a73793e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Iterate through the current month's data\n",
+    "for index, current_record in current_df.iterrows():\n",
+    "    # Generate the combined Emp_Pos_ID for current and next data\n",
+    "    current_emp_pos = current_record[\"Emp_Pos_ID\"]\n",
+    "    next_record = next_df[next_df[\"Emp_Pos_ID\"] == current_emp_pos]\n",
+    "\n",
+    "    # If exact Emp_Pos_ID doesn't exist in the next month\n",
+    "    if next_record.empty:\n",
+    "        # Check if the Employee ID exists in the next month with a different Position ID\n",
+    "        employee_matches = next_df[next_df[\"Employee ID\"] == current_record[\"Employee ID\"]]\n",
+    "        if not employee_matches.empty:\n",
+    "            # Employee exists but with a different Position ID\n",
+    "            new_pos_id = employee_matches.iloc[0][\"Position ID\"]\n",
+    "            new_emp_pos_id = employee_matches.iloc[0][\"Emp_Pos_ID\"]\n",
+    "            changes.append({\n",
+    "                \"Position ID\": current_record[\"Position ID\"],\n",
+    "                \"Employee ID\": current_record[\"Employee ID\"],\n",
+    "                \"Month Changed\": month,\n",
+    "                \"Change Description\": f\"Mobility: Position ID changed to {new_pos_id} (New Emp_Pos_ID: {new_emp_pos_id})\",\n",
+    "                \"Source\": \"GHA\",\n",
+    "            })\n",
+    "            continue\n",
+    "\n",
+    "        # Employee ID does not exist in the next month (Movement Out)\n",
+    "        changes.append({\n",
+    "            \"Position ID\": current_record[\"Position ID\"],\n",
+    "            \"Employee ID\": current_record[\"Employee ID\"],\n",
+    "            \"Month Changed\": month,\n",
+    "            \"Change Description\": \"Employee ID does not exist, movement out\",\n",
+    "            \"Source\": \"GHA\",\n",
+    "        })\n",
+    "        continue\n",
+    "\n",
+    "    # Convert to a single next record for further comparison\n",
+    "    next_record = next_record.iloc[0]\n",
+    "\n",
+    "    # Initialize the change description list\n",
+    "    change_desc = []\n",
+    "\n",
+    "    # Compare other important columns for changes\n",
+    "    for col in comparison_columns:\n",
+    "        current_value = current_record[col]\n",
+    "        next_value = next_record[col]\n",
+    "\n",
+    "        # Case 1: Values differ between current and next\n",
+    "        if pd.notna(current_value) and pd.notna(next_value) and current_value != next_value:\n",
+    "            change_desc.append(f\"{col} changed\")\n",
+    "\n",
+    "        # Case 2: Value is blank/missing in current but exists in next\n",
+    "        elif (pd.isna(current_value) or current_value == \"\") and pd.notna(next_value):\n",
+    "            change_desc.append(f\"{col} new value added\")\n",
+    "\n",
+    "    # Append to changes list if any differences are found\n",
+    "    if change_desc:\n",
+    "        changes.append({\n",
+    "            \"Position ID\": current_record[\"Position ID\"],\n",
+    "            \"Employee ID\": current_record[\"Employee ID\"],\n",
+    "            \"Month Changed\": month,\n",
+    "            \"Change Description\": \"; \".join(change_desc),\n",
+    "            \"Source\": \"GHA\",\n",
+    "        })\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "beadbcbf",
    "metadata": {},
    "outputs": [],
    "source": [
