--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,6 +3,61 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a37e7c8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create Emp_Pos_ID for both current and previous month's GHA data\n",
+    "current_df[\"Emp_Pos_ID\"] = current_df[\"Employee ID\"].astype(str) + \"_\" + current_df[\"Position ID\"].astype(str)\n",
+    "prev_month_df[\"Emp_Pos_ID\"] = prev_month_df[\"Employee ID\"].astype(str) + \"_\" + prev_month_df[\"Position ID\"].astype(str)\n",
+    "\n",
+    "# Step 1: Identify new records\n",
+    "def is_new_record(row):\n",
+    "    pos_id = row[\"Position ID\"]\n",
+    "    emp_id = row[\"Employee ID\"]\n",
+    "    emp_pos_id = row[\"Emp_Pos_ID\"]\n",
+    "    \n",
+    "    # Check if Position ID exists in the previous month's data\n",
+    "    if pos_id not in prev_month_df[\"Position ID\"].values:\n",
+    "        return True  # New Position ID = New record\n",
+    "    \n",
+    "    # If Position ID exists, check if Emp_Pos_ID is new\n",
+    "    if emp_pos_id not in prev_month_df[\"Emp_Pos_ID\"].values:\n",
+    "        # Check if Employee ID is also new (not in previous month)\n",
+    "        if emp_id not in prev_month_df[\"Employee ID\"].values:\n",
+    "            return True  # New Employee ID + Position ID = New record\n",
+    "    \n",
+    "    return False\n",
+    "\n",
+    "current_df[\"Is New Record\"] = current_df.apply(is_new_record, axis=1)\n",
+    "\n",
+    "# Step 2: Identify mobility\n",
+    "def is_mobility(row):\n",
+    "    pos_id = row[\"Position ID\"]\n",
+    "    emp_id = row[\"Employee ID\"]\n",
+    "    \n",
+    "    # Check if Position ID exists in the previous month's data\n",
+    "    if pos_id in prev_month_df[\"Position ID\"].values:\n",
+    "        # Check if Employee ID has changed\n",
+    "        prev_emp_id = prev_month_df[prev_month_df[\"Position ID\"] == pos_id][\"Employee ID\"].values[0]\n",
+    "        if emp_id != prev_emp_id:\n",
+    "            # Check if Employee ID exists elsewhere in the previous month's data\n",
+    "            if emp_id in prev_month_df[\"Employee ID\"].values:\n",
+    "                return True  # Mobility: Employee moved to a new Position ID\n",
+    "    \n",
+    "    return False\n",
+    "\n",
+    "current_df[\"Is Mobility\"] = current_df.apply(is_mobility, axis=1)\n",
+    "\n",
+    "# Step 3: Finalize master_df\n",
+    "current_df[\"Status\"] = current_df.apply(\n",
+    "    lambda row: \"New Record\" if row[\"Is New Record\"] else \"Mobility\" if row[\"Is Mobility\"] else \"Existing\", axis=1\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4a73793e",
    "metadata": {},
    "outputs": [],
