--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,6 +3,113 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7428116b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize lists for updated, new, and demised records\n",
+    "updated_df = []\n",
+    "new_df = []\n",
+    "demised_records = []\n",
+    "\n",
+    "# Iterate through the current month's data\n",
+    "for index, current_record in current_df.iterrows():\n",
+    "    # Generate the combined Emp_Pos_ID for current and next data\n",
+    "    current_emp_pos = current_record[\"Emp_Pos_ID\"]\n",
+    "    next_record = next_df[next_df[\"Emp_Pos_ID\"] == current_emp_pos]\n",
+    "\n",
+    "    # Case 1: Emp_Pos_ID exists in both months\n",
+    "    if not next_record.empty:\n",
+    "        next_record = next_record.iloc[0]\n",
+    "\n",
+    "        # Initialize the change description list\n",
+    "        change_desc = []\n",
+    "\n",
+    "        # Compare columns for changes\n",
+    "        for col in comparison_columns:\n",
+    "            current_value = current_record[col]\n",
+    "            next_value = next_record[col]\n",
+    "\n",
+    "            # Case 1.1: Values differ between current and next\n",
+    "            if pd.notna(current_value) and pd.notna(next_value) and current_value != next_value:\n",
+    "                if col == 'BF Level 3 Name':\n",
+    "                    change_desc.append('Target Transfer. Internal Movement')\n",
+    "                elif col == 'BF Level 4 Name':\n",
+    "                    change_desc.append('Internal Movement in Finance')\n",
+    "                else:\n",
+    "                    change_desc.append(f\"{col} changed\")\n",
+    "\n",
+    "            # Case 1.2: Value is blank/missing in current but exists in next\n",
+    "            elif (pd.isna(current_value) or current_value == \"\") and pd.notna(next_value):\n",
+    "                change_desc.append(f\"{col} new value added\")\n",
+    "\n",
+    "        # Append to updated_df if any differences are found\n",
+    "        if change_desc:\n",
+    "            updated_df.append({\n",
+    "                \"Position ID\": current_record[\"Position ID\"],\n",
+    "                \"Employee ID\": current_record[\"Employee ID\"],\n",
+    "                \"Month Changed\": month,\n",
+    "                \"Change Description\": \"; \".join(change_desc),\n",
+    "                \"Source\": \"GHA\",\n",
+    "            })\n",
+    "\n",
+    "    # Case 2: Emp_Pos_ID is in the current month but not in the next month\n",
+    "    elif next_record.empty:\n",
+    "        # Check if Employee ID exists in the next month with a different Position ID\n",
+    "        employee_matches = next_df[next_df[\"Employee ID\"] == current_record[\"Employee ID\"]]\n",
+    "        if not employee_matches.empty:\n",
+    "            # Employee exists but with a different Position ID (Mobility)\n",
+    "            new_pos_id = employee_matches.iloc[0][\"Position ID\"]\n",
+    "            new_emp_pos_id = employee_matches.iloc[0][\"Emp_Pos_ID\"]\n",
+    "            updated_df.append({\n",
+    "                \"Position ID\": current_record[\"Position ID\"],\n",
+    "                \"Employee ID\": current_record[\"Employee ID\"],\n",
+    "                \"Month Changed\": month,\n",
+    "                \"Change Description\": f\"Mobility: Position ID changed to {new_pos_id} (New Emp_Pos_ID: {new_emp_pos_id})\",\n",
+    "                \"Source\": \"GHA\",\n",
+    "            })\n",
+    "        else:\n",
+    "            # Check if Position ID exists in next month's Open Positions file\n",
+    "            if current_record[\"Position ID\"] not in open_pos_file[\"Position ID\"].values:\n",
+    "                demised_records.append({\n",
+    "                    \"Position ID\": current_record[\"Position ID\"],\n",
+    "                    \"Month Demised\": next_month,\n",
+    "                    \"Change Description\": \"Position Demised\",\n",
+    "                })\n",
+    "            else:\n",
+    "                # Employee ID does not exist in the next month (Movement Out)\n",
+    "                updated_df.append({\n",
+    "                    \"Position ID\": current_record[\"Position ID\"],\n",
+    "                    \"Employee ID\": current_record[\"Employee ID\"],\n",
+    "                    \"Month Changed\": month,\n",
+    "                    \"Change Description\": \"Leaver/Movement Out\",\n",
+    "                    \"Source\": \"GHA\",\n",
+    "                })\n",
+    "\n",
+    "# Case 3: Check for new records in the next month\n",
+    "for index, next_record in next_df.iterrows():\n",
+    "    next_emp_pos = next_record[\"Emp_Pos_ID\"]\n",
+    "    current_record = current_df[current_df[\"Emp_Pos_ID\"] == next_emp_pos]\n",
+    "\n",
+    "    # If Emp_Pos_ID is not in the current month, it's a new record\n",
+    "    if current_record.empty:\n",
+    "        new_df.append({\n",
+    "            \"Position ID\": next_record[\"Position ID\"],\n",
+    "            \"Employee ID\": next_record[\"Employee ID\"],\n",
+    "            \"Month Added\": month,\n",
+    "            \"Source\": \"GHA\",\n",
+    "            \"Change Description\": \"New Record\",\n",
+    "        })\n",
+    "\n",
+    "# Convert updated_df, new_df, and demised_records to DataFrames\n",
+    "updated_df = pd.DataFrame(updated_df)\n",
+    "new_df = pd.DataFrame(new_df)\n",
+    "demised_records = pd.DataFrame(demised_records)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a37e7c8b",
    "metadata": {},
    "outputs": [],
@@ -54,6 +161,14 @@
     "    lambda row: \"New Record\" if row[\"Is New Record\"] else \"Mobility\" if row[\"Is Mobility\"] else \"Existing\", axis=1\n",
     ")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "428c97b7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
