--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,105 +3,108 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaf0523d",
+   "id": "43c7a6df",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initialize lists for updated, new, and demised records\n",
+    "updated_df = []\n",
+    "new_df = []\n",
+    "demised_records = []\n",
+    "\n",
     "# Iterate through the current month's data\n",
     "for index, current_record in current_df.iterrows():\n",
     "    # Generate the combined Emp_Pos_ID for current and next data\n",
     "    current_emp_pos = current_record[\"Emp_Pos_ID\"]\n",
     "    next_record = next_df[next_df[\"Emp_Pos_ID\"] == current_emp_pos]\n",
     "\n",
-    "    # If exact Emp_Pos_ID exists in both months, compare for changes\n",
+    "    # Case 1: Emp_Pos_ID exists in both months\n",
     "    if not next_record.empty:\n",
-    "        next_record = next_record.iloc[0]  # Convert to a single record for comparison\n",
-    "        change_desc = []  # Initialize the change description list\n",
+    "        next_record = next_record.iloc[0]\n",
     "\n",
-    "        # Compare other important columns for changes\n",
+    "        # Initialize the change description list\n",
+    "        change_desc = []\n",
+    "\n",
+    "        # Compare columns for changes\n",
     "        for col in comparison_columns:\n",
     "            current_value = current_record[col]\n",
     "            next_value = next_record[col]\n",
     "\n",
-    "            # Case 1: Values differ between current and next\n",
+    "            # Case 1.1: Values differ between current and next\n",
     "            if pd.notna(current_value) and pd.notna(next_value) and current_value != next_value:\n",
-    "                if col == \"BF Level 3 Name\":\n",
-    "                    change_desc.append(\"Target Transfer. Internal Movement\")\n",
-    "                elif col == \"BF Level 4 Name\":\n",
-    "                    change_desc.append(\"Internal Movement in Finance\")\n",
+    "                if col == 'BF Level 3 Name':\n",
+    "                    change_desc.append('Target Transfer. Internal Movement')\n",
+    "                elif col == 'BF Level 4 Name':\n",
+    "                    change_desc.append('Internal Movement in Finance')\n",
     "                else:\n",
     "                    change_desc.append(f\"{col} changed\")\n",
     "\n",
-    "            # Case 2: Value is blank/missing in current but exists in next\n",
+    "            # Case 1.2: Value is blank/missing in current but exists in next\n",
     "            elif (pd.isna(current_value) or current_value == \"\") and pd.notna(next_value):\n",
-    "                change_desc.append(f\"New value added for {col}\")\n",
+    "                change_desc.append(f\"{col} new value added\")\n",
     "\n",
-    "        # If changes are detected, append the record to the changes list\n",
+    "        # Append updated values (next_record) to updated_df if any differences are found\n",
     "        if change_desc:\n",
-    "            changes.append({\n",
-    "                **current_record.to_dict(),  # Include all columns from the current record\n",
+    "            updated_row = next_record.to_dict()  # Use updated (next month's) values\n",
+    "            updated_row.update({\n",
     "                \"Month Changed\": month,\n",
     "                \"Change Description\": \"; \".join(change_desc),\n",
     "                \"Source\": \"GHA\",\n",
     "            })\n",
-    "        continue\n",
+    "            updated_df.append(updated_row)\n",
     "\n",
-    "    # If exact Emp_Pos_ID doesn't exist, check for mobility or movement out\n",
-    "    employee_matches = next_df[next_df[\"Employee ID\"] == current_record[\"Employee ID\"]]\n",
-    "    if not employee_matches.empty:\n",
-    "        # Employee exists but with a different Position ID\n",
-    "        new_pos_id = employee_matches.iloc[0][\"Position ID\"]\n",
-    "        new_emp_pos_id = employee_matches.iloc[0][\"Emp_Pos_ID\"]\n",
-    "        changes.append({\n",
-    "            **current_record.to_dict(),\n",
-    "            \"Month Changed\": month,\n",
-    "            \"Change Description\": f\"Mobility: Position ID changed to {new_pos_id} (New Emp_Pos_ID: {new_emp_pos_id})\",\n",
-    "            \"Source\": \"GHA\",\n",
-    "        })\n",
-    "        continue\n",
+    "    # Case 2: Emp_Pos_ID is in the current month but not in the next month\n",
+    "    elif next_record.empty:\n",
+    "        # Check if Employee ID exists in the next month with a different Position ID\n",
+    "        employee_matches = next_df[next_df[\"Employee ID\"] == current_record[\"Employee ID\"]]\n",
+    "        if not employee_matches.empty:\n",
+    "            # Employee exists but with a different Position ID (Mobility)\n",
+    "            new_pos_id = employee_matches.iloc[0][\"Position ID\"]\n",
+    "            new_emp_pos_id = employee_matches.iloc[0][\"Emp_Pos_ID\"]\n",
+    "            updated_row = employee_matches.iloc[0].to_dict()  # Use updated (next month's) values\n",
+    "            updated_row.update({\n",
+    "                \"Month Changed\": month,\n",
+    "                \"Change Description\": f\"Mobility: Position ID changed to {new_pos_id} (New Emp_Pos_ID: {new_emp_pos_id})\",\n",
+    "                \"Source\": \"GHA\",\n",
+    "            })\n",
+    "            updated_df.append(updated_row)\n",
+    "        else:\n",
+    "            # Check if Position ID exists in next month's Open Positions file\n",
+    "            if current_record[\"Position ID\"] not in open_pos_file[\"Position ID\"].values:\n",
+    "                demised_records.append({\n",
+    "                    \"Position ID\": current_record[\"Position ID\"],\n",
+    "                    \"Month Demised\": next_month,\n",
+    "                    \"Change Description\": \"Position Demised\",\n",
+    "                })\n",
+    "            else:\n",
+    "                # Employee ID does not exist in the next month (Movement Out)\n",
+    "                updated_row = current_record.to_dict()\n",
+    "                updated_row.update({\n",
+    "                    \"Month Changed\": month,\n",
+    "                    \"Change Description\": \"Leaver/Movement Out\",\n",
+    "                    \"Source\": \"GHA\",\n",
+    "                })\n",
+    "                updated_df.append(updated_row)\n",
     "\n",
-    "    # Employee ID does not exist in the next month (Movement Out)\n",
-    "    changes.append({\n",
-    "        **current_record.to_dict(),\n",
-    "        \"Month Changed\": month,\n",
-    "        \"Change Description\": \"Employee ID does not exist, movement out\",\n",
-    "        \"Source\": \"GHA\",\n",
-    "    })\n",
-    "\n",
-    "# Identify new records in the next month's data\n",
+    "# Case 3: Check for new records in the next month\n",
     "for index, next_record in next_df.iterrows():\n",
     "    next_emp_pos = next_record[\"Emp_Pos_ID\"]\n",
     "    current_record = current_df[current_df[\"Emp_Pos_ID\"] == next_emp_pos]\n",
     "\n",
-    "    # If Emp_Pos_ID is not in the current month's data, check further conditions\n",
+    "    # If Emp_Pos_ID is not in the current month, it's a new record\n",
     "    if current_record.empty:\n",
-    "        employee_matches = current_df[current_df[\"Employee ID\"] == next_record[\"Employee ID\"]]\n",
-    "        if not employee_matches.empty:\n",
-    "            # Employee ID exists in the current month but with a different Position ID\n",
-    "            continue  # Already handled as mobility in the previous loop\n",
-    "\n",
-    "        # New record identified\n",
-    "        new_records.append({\n",
-    "            **next_record.to_dict(),  # Include all columns from the new record\n",
+    "        new_row = next_record.to_dict()\n",
+    "        new_row.update({\n",
     "            \"Month Added\": month,\n",
     "            \"Source\": \"GHA\",\n",
+    "            \"Change Description\": \"New Record\",\n",
     "        })\n",
+    "        new_df.append(new_row)\n",
     "\n",
-    "# Identify Position Demised cases\n",
-    "for index, current_record in current_df.iterrows():\n",
-    "    current_pos_id = current_record[\"Position ID\"]\n",
-    "    next_match = next_df[next_df[\"Position ID\"] == current_pos_id]\n",
-    "    open_pos_match = open_pos_df[open_pos_df[\"Position ID\"] == current_pos_id]\n",
-    "\n",
-    "    if next_match.empty and open_pos_match.empty:\n",
-    "        # Position ID not found in both next month's data and open positions\n",
-    "        changes.append({\n",
-    "            **current_record.to_dict(),\n",
-    "            \"Month Changed\": month,\n",
-    "            \"Change Description\": \"Position Demised\",\n",
-    "            \"Month Demised\": month,\n",
-    "            \"Source\": \"GHA\",\n",
-    "        })\n"
+    "# Convert updated_df, new_df, and demised_records to DataFrames\n",
+    "updated_df = pd.DataFrame(updated_df)\n",
+    "new_df = pd.DataFrame(new_df)\n",
+    "demised_records = pd.DataFrame(demised_records)\n"
    ]
   },
   {
@@ -162,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20075885",
+   "id": "c960de2a",
    "metadata": {},
    "outputs": [],
    "source": []
