--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -2,6 +2,112 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a456ae36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "def process_hdpi_file(input_file, month_name):\n",
+    "    \"\"\"\n",
+    "    Process the HDPI Excel file.\n",
+    "    Modify this function to include your specific processing logic.\n",
+    "    \"\"\"\n",
+    "    # Load the Excel file\n",
+    "    df = pd.read_excel(input_file)\n",
+    "\n",
+    "    # Perform your processing logic here\n",
+    "    # Example: Add a new column for demonstration\n",
+    "    df[\"Processed\"] = f\"Processed for {month_name}\"\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "def process_files_in_folder(ifolder, ofolder):\n",
+    "    \"\"\"\n",
+    "    Processes all Excel files in the given folder.\n",
+    "    \"\"\"\n",
+    "    # Ensure output folder exists\n",
+    "    os.makedirs(ofolder, exist_ok=True)\n",
+    "\n",
+    "    # Get the list of files in the input folder\n",
+    "    files = [f for f in os.listdir(ifolder) if f.endswith(\".xlsx\")]\n",
+    "\n",
+    "    for file_name in files:\n",
+    "        try:\n",
+    "            # Extract the file path\n",
+    "            input_file_path = os.path.join(ifolder, file_name)\n",
+    "\n",
+    "            # Extract the month name (last three letters before \".xlsx\")\n",
+    "            month_name = file_name.split()[-1][:3]\n",
+    "\n",
+    "            # Load and process the file\n",
+    "            processed_df = process_hdpi_file(input_file_path, month_name)\n",
+    "\n",
+    "            # Save the processed file with the desired name in the output folder\n",
+    "            output_file_name = f\"HDPI {month_name}.xlsx\"\n",
+    "            output_file_path = os.path.join(ofolder, output_file_name)\n",
+    "            processed_df.to_excel(output_file_path, index=False)\n",
+    "\n",
+    "            print(f\"Processed and saved: {output_file_path}\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error processing {file_name}: {e}\")\n",
+    "\n",
+    "# Define input and output folder paths\n",
+    "ifolder = r\"C:\\path\\to\\input\\folder\"  # Replace with your input folder path\n",
+    "ofolder = r\"C:\\path\\to\\output\\folder\"  # Replace with your output folder path\n",
+    "\n",
+    "# Process all files in the folder\n",
+    "process_files_in_folder(ifolder, ofolder)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6d6ebf19",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "com_error",
+     "evalue": "(-2147352567, 'Exception occurred.', (0, 'Microsoft Word', 'Command failed', 'wdmain11.chm', 36966, -2146824090), None)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mcom_error\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-97dbbe50c67d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[0mdocx_file\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34mr\"C:\\\\Users\\\\KS\\\\Thesis.docx\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[0mpdf_file\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34mr\"C:\\\\Users\\\\KS\\\\Thesis_test.pdf\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m \u001b[0mconvert_docx_to_pdf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdocx_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpdf_file\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-7-97dbbe50c67d>\u001b[0m in \u001b[0;36mconvert_docx_to_pdf\u001b[1;34m(docx_path, pdf_path)\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[1;31m# Save as PDF\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m     \u001b[0mdoc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSaveAs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpdf_path\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mFileFormat\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m17\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# 17 corresponds to the PDF format\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[1;31m# Close the document and quit Word\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Users\\Kirti\\anaconda3\\lib\\site-packages\\win32com\\client\\dynamic.py\u001b[0m in \u001b[0;36mSaveAs\u001b[1;34m(self, FileName, FileFormat, LockComments, Password, AddToRecentFiles, WritePassword, ReadOnlyRecommended, EmbedTrueTypeFonts, SaveNativePictureFormat, SaveFormsData, SaveAsAOCELetter, Encoding, InsertLineBreaks, AllowSubstitutions, LineEnding, AddBiDiMarks)\u001b[0m\n",
+      "\u001b[1;31mcom_error\u001b[0m: (-2147352567, 'Exception occurred.', (0, 'Microsoft Word', 'Command failed', 'wdmain11.chm', 36966, -2146824090), None)"
+     ]
+    }
+   ],
+   "source": [
+    "import win32com.client\n",
+    "\n",
+    "def convert_docx_to_pdf(docx_path, pdf_path):\n",
+    "    # Initialize Word application\n",
+    "    word = win32com.client.Dispatch(\"Word.Application\")\n",
+    "    word.Visible = False  # Run in the background\n",
+    "\n",
+    "    # Open the .docx file\n",
+    "    doc = word.Documents.Open(docx_path)\n",
+    "\n",
+    "    # Save as PDF\n",
+    "    doc.SaveAs(pdf_path, FileFormat=17)  # 17 corresponds to the PDF format\n",
+    "\n",
+    "    # Close the document and quit Word\n",
+    "    doc.Close()\n",
+    "    word.Quit()\n",
+    "\n",
+    "# Example usage\n",
+    "docx_file = r\"C:\\\\Users\\\\KS\\\\Thesis.docx\"\n",
+    "pdf_file = r\"C:\\\\Users\\\\KS\\\\Thesis_test.pdf\"\n",
+    "convert_docx_to_pdf(docx_file, pdf_file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "id": "1aa5cc70",
    "metadata": {},
