--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,88 +3,92 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bab536a4",
+   "id": "402b34b4",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
+    "import math\n",
     "\n",
-    "# Load your source data\n",
-    "source_df = pd.read_excel(\"source_file.xlsx\")  # Replace with your source file path\n",
+    "# Example data\n",
+    "data = {\n",
+    "    \"FTE\": [6.5],\n",
+    "    \"GM\": [0],\n",
+    "    \"MD\": [0],\n",
+    "    \"3\": [0],\n",
+    "    \"4\": [2.5],\n",
+    "    \"5\": [0],\n",
+    "    \"6\": [3],\n",
+    "    \"7\": [1],\n",
+    "    \"8\": [0],\n",
+    "    \"Entity\": [\"Entity1\"],\n",
+    "    \"Description\": [\"Example description\"],\n",
+    "    \"Country\": [\"Country1\"],\n",
+    "    \"RTN\": [\"RTN 123 - Example\"]\n",
+    "}\n",
+    "source_df = pd.DataFrame(data)\n",
     "\n",
-    "# Filter rows where 'FTE' is not blank\n",
-    "filtered_df = source_df[source_df[\"FTE\"].notnull()].copy()\n",
+    "# Columns to check for GCB\n",
+    "gcb_columns = [\"GM\", \"MD\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\"]\n",
     "\n",
-    "# Initialize the template columns\n",
+    "# Clean FTE\n",
+    "source_df[\"FTE\"] = pd.to_numeric(source_df[\"FTE\"], errors=\"coerce\")\n",
+    "\n",
+    "# Filter valid rows\n",
+    "filtered_df = source_df[source_df[\"FTE\"].notnull() & source_df[\"FTE\"] != 0]\n",
+    "\n",
+    "# Create the template dataframe\n",
     "template_columns = [\n",
     "    \"Big Grid Stack\", \"AOP YEAR\", \"Business Framework RTN Code\",\n",
     "    \"Business Framework\", \"Business Framework Group\", \"Country\",\n",
     "    \"GCB\", \"Emp. Type\", \"Hiring Source\", \"FTE\", \"Start Month\",\n",
-    "    \"WPB\", \"GBM\", \"CMB\", \"Diver (only for Replacement stack lines)\",\n",
-    "    \"Entity\", \"Description\"\n",
+    "    \"WPB\", \"GBM\", \"CMB\", \"Diver\", \"Entity\", \"Description\"\n",
     "]\n",
-    "\n",
-    "# Create an empty dataframe with the template columns\n",
     "template_df = pd.DataFrame(columns=template_columns)\n",
     "\n",
-    "# Function to determine \"Big Grid Stack\"\n",
-    "def get_big_grid_stack(row):\n",
-    "    if row[\"Type\"] == \"BC-TT\":\n",
-    "        return \"Inter Boundary Changes\"\n",
-    "    elif row[\"FTE\"] in [1, -1]:\n",
-    "        return \"New Perm Position (within FRP) -Staff Drawdown\" if row[\"FTE\"] == 1 else \"Forecast program/Other Saves-Saves Forecast Tracker\"\n",
-    "    return \"\"\n",
-    "\n",
-    "# Function to extract \"RTN Code\"\n",
-    "def extract_rtn_code(rtn):\n",
-    "    return rtn.split(\" \")[0] if isinstance(rtn, str) else \"\"\n",
-    "\n",
-    "# Function to determine \"GCB\"\n",
-    "def determine_gcb(row):\n",
-    "    gcb_columns = [\"GM\", \"MD\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\"]\n",
+    "# Process rows\n",
+    "for _, row in filtered_df.iterrows():\n",
+    "    fte_value = row[\"FTE\"]\n",
+    "    duplicate_fte = -1 if fte_value < 0 else 1\n",
+    "    abs_fte = math.ceil(abs(fte_value))  # Round up to nearest whole number\n",
+    "    \n",
+    "    # Calculate GCB distribution\n",
+    "    gcb_distribution = []\n",
     "    for col in gcb_columns:\n",
     "        if not pd.isna(row[col]) and row[col] != 0:\n",
-    "            return col\n",
-    "    return \"\"\n",
-    "\n",
-    "# Function to determine \"Start Month\"\n",
-    "def determine_start_month(date):\n",
-    "    if pd.isna(date):\n",
-    "        return \"\"\n",
-    "    year = pd.to_datetime(date).year\n",
-    "    return date if year == 2025 else \"01/31/2025\"\n",
-    "\n",
-    "# Process each row\n",
-    "for _, row in filtered_df.iterrows():\n",
-    "    fte_value = int(row[\"FTE\"])\n",
-    "    abs_fte = abs(fte_value)\n",
-    "    duplicate_fte = 1 if fte_value > 0 else -1\n",
-    "\n",
-    "    for _ in range(abs_fte):\n",
+    "            gcb_distribution.extend([col] * abs(math.ceil(row[col])))\n",
+    "    \n",
+    "    # Ensure the distribution matches FTE\n",
+    "    if len(gcb_distribution) > abs_fte:\n",
+    "        gcb_distribution = gcb_distribution[:abs_fte]\n",
+    "    elif len(gcb_distribution) < abs_fte:\n",
+    "        raise ValueError(f\"Mismatch: Unable to allocate GCB for {abs_fte} rows.\")\n",
+    "    \n",
+    "    # Create rows for the template\n",
+    "    for gcb in gcb_distribution:\n",
     "        new_row = {\n",
-    "            \"Big Grid Stack\": get_big_grid_stack(row),\n",
+    "            \"Big Grid Stack\": \"Some logic here\",  # Adjust logic as required\n",
     "            \"AOP YEAR\": \"FY25\",\n",
-    "            \"Business Framework RTN Code\": extract_rtn_code(row[\"RTN\"]),\n",
+    "            \"Business Framework RTN Code\": row[\"RTN\"].split()[0],\n",
     "            \"Business Framework\": \"\",\n",
     "            \"Business Framework Group\": \"\",\n",
     "            \"Country\": row[\"Country\"],\n",
-    "            \"GCB\": determine_gcb(row),\n",
+    "            \"GCB\": gcb,\n",
     "            \"Emp. Type\": \"FTE\",\n",
     "            \"Hiring Source\": \"External\",\n",
     "            \"FTE\": duplicate_fte,\n",
-    "            \"Start Month\": determine_start_month(row[\"Date\"]),\n",
+    "            \"Start Month\": \"01/31/2025\" if int(row[\"FTE\"]) < 2025 else row[\"FTE\"],\n",
     "            \"WPB\": \"0%\",\n",
     "            \"GBM\": \"100.00%\",\n",
     "            \"CMB\": \"0%\",\n",
-    "            \"Diver (only for Replacement stack lines)\": \"\",\n",
+    "            \"Diver\": \"\",\n",
     "            \"Entity\": row[\"Entity\"],\n",
-    "            \"Description\": row[\"Description\"]\n",
+    "            \"Description\": row[\"Description\"],\n",
     "        }\n",
     "        template_df = pd.concat([template_df, pd.DataFrame([new_row])], ignore_index=True)\n",
     "\n",
-    "# Save the template dataframe to an Excel file\n",
-    "template_df.to_excel(\"output_template.xlsx\", index=False)\n"
+    "# View the result\n",
+    "print(template_df)\n"
    ]
   },
   {
