--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,41 +3,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "402b34b4",
+   "id": "da07b337",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import math\n",
     "\n",
-    "# Example data\n",
+    "# Example source data\n",
     "data = {\n",
-    "    \"FTE\": [6.5],\n",
-    "    \"GM\": [0],\n",
-    "    \"MD\": [0],\n",
-    "    \"3\": [0],\n",
-    "    \"4\": [2.5],\n",
-    "    \"5\": [0],\n",
-    "    \"6\": [3],\n",
-    "    \"7\": [1],\n",
-    "    \"8\": [0],\n",
-    "    \"Entity\": [\"Entity1\"],\n",
-    "    \"Description\": [\"Example description\"],\n",
-    "    \"Country\": [\"Country1\"],\n",
-    "    \"RTN\": [\"RTN 123 - Example\"]\n",
+    "    \"FTE\": [6.5, -12, 3],\n",
+    "    \"GM\": [0, 0, 0],\n",
+    "    \"MD\": [0, 0, 0],\n",
+    "    \"3\": [0, 0, 0],\n",
+    "    \"4\": [2.5, -4, 0],\n",
+    "    \"5\": [0, 0, 0],\n",
+    "    \"6\": [3, -6, 0],\n",
+    "    \"7\": [1, -1, 1],\n",
+    "    \"8\": [0, -1, 0],\n",
+    "    \"Entity\": [\"Entity1\", \"Entity2\", \"Entity3\"],\n",
+    "    \"Description\": [\"Example 1\", \"Example 2\", \"Example 3\"],\n",
+    "    \"Country\": [\"Country1\", \"Country2\", \"Country3\"],\n",
+    "    \"RTN\": [\"RTN 123 - Example\", \"RTN 456 - Sample\", \"RTN 789 - Test\"]\n",
     "}\n",
+    "\n",
     "source_df = pd.DataFrame(data)\n",
     "\n",
-    "# Columns to check for GCB\n",
+    "# Columns to check for GCB values\n",
     "gcb_columns = [\"GM\", \"MD\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\"]\n",
     "\n",
-    "# Clean FTE\n",
+    "# Clean and convert FTE column\n",
     "source_df[\"FTE\"] = pd.to_numeric(source_df[\"FTE\"], errors=\"coerce\")\n",
     "\n",
-    "# Filter valid rows\n",
+    "# Filter rows where FTE is valid and not blank\n",
     "filtered_df = source_df[source_df[\"FTE\"].notnull() & source_df[\"FTE\"] != 0]\n",
     "\n",
-    "# Create the template dataframe\n",
+    "# Create the template dataframe with required columns\n",
     "template_columns = [\n",
     "    \"Big Grid Stack\", \"AOP YEAR\", \"Business Framework RTN Code\",\n",
     "    \"Business Framework\", \"Business Framework Group\", \"Country\",\n",
@@ -46,28 +47,31 @@
     "]\n",
     "template_df = pd.DataFrame(columns=template_columns)\n",
     "\n",
-    "# Process rows\n",
+    "# Process each row in the filtered dataframe\n",
     "for _, row in filtered_df.iterrows():\n",
     "    fte_value = row[\"FTE\"]\n",
-    "    duplicate_fte = -1 if fte_value < 0 else 1\n",
-    "    abs_fte = math.ceil(abs(fte_value))  # Round up to nearest whole number\n",
-    "    \n",
+    "    duplicate_fte = -1 if fte_value < 0 else 1  # Determine positive or negative FTE\n",
+    "    abs_fte = math.ceil(abs(fte_value))  # Round up FTE to the nearest whole number\n",
+    "\n",
     "    # Calculate GCB distribution\n",
     "    gcb_distribution = []\n",
     "    for col in gcb_columns:\n",
     "        if not pd.isna(row[col]) and row[col] != 0:\n",
     "            gcb_distribution.extend([col] * abs(math.ceil(row[col])))\n",
-    "    \n",
-    "    # Ensure the distribution matches FTE\n",
+    "\n",
+    "    # Ensure GCB distribution matches the FTE\n",
     "    if len(gcb_distribution) > abs_fte:\n",
     "        gcb_distribution = gcb_distribution[:abs_fte]\n",
     "    elif len(gcb_distribution) < abs_fte:\n",
     "        raise ValueError(f\"Mismatch: Unable to allocate GCB for {abs_fte} rows.\")\n",
-    "    \n",
-    "    # Create rows for the template\n",
+    "\n",
+    "    # Create rows in the template for each GCB value\n",
     "    for gcb in gcb_distribution:\n",
     "        new_row = {\n",
-    "            \"Big Grid Stack\": \"Some logic here\",  # Adjust logic as required\n",
+    "            \"Big Grid Stack\": (\n",
+    "                \"New Perm Position (within FRP) - Staff Drawdown\" if duplicate_fte == 1\n",
+    "                else \"Forecast program/Other Saves-Saves Forecast Tracker\"\n",
+    "            ),\n",
     "            \"AOP YEAR\": \"FY25\",\n",
     "            \"Business Framework RTN Code\": row[\"RTN\"].split()[0],\n",
     "            \"Business Framework\": \"\",\n",
@@ -77,7 +81,7 @@
     "            \"Emp. Type\": \"FTE\",\n",
     "            \"Hiring Source\": \"External\",\n",
     "            \"FTE\": duplicate_fte,\n",
-    "            \"Start Month\": \"01/31/2025\" if int(row[\"FTE\"]) < 2025 else row[\"FTE\"],\n",
+    "            \"Start Month\": \"01/31/2025\" if pd.to_datetime(row[\"FTE\"], errors=\"coerce\").year == 2024 else row[\"FTE\"],\n",
     "            \"WPB\": \"0%\",\n",
     "            \"GBM\": \"100.00%\",\n",
     "            \"CMB\": \"0%\",\n",
@@ -87,7 +91,7 @@
     "        }\n",
     "        template_df = pd.concat([template_df, pd.DataFrame([new_row])], ignore_index=True)\n",
     "\n",
-    "# View the result\n",
+    "# Output the result\n",
     "print(template_df)\n"
    ]
   },
