--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -2,29 +2,176 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "da07b337",
+   "execution_count": 1,
+   "id": "86a99c7e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                       Big Grid Stack AOP YEAR  \\\n",
+      "0     New Perm Position (within FRP) - Staff Drawdown     FY25   \n",
+      "1     New Perm Position (within FRP) - Staff Drawdown     FY25   \n",
+      "2     New Perm Position (within FRP) - Staff Drawdown     FY25   \n",
+      "3     New Perm Position (within FRP) - Staff Drawdown     FY25   \n",
+      "4     New Perm Position (within FRP) - Staff Drawdown     FY25   \n",
+      "5     New Perm Position (within FRP) - Staff Drawdown     FY25   \n",
+      "6     New Perm Position (within FRP) - Staff Drawdown     FY25   \n",
+      "7   Forecast program/Other Saves-Saves Forecast Tr...     FY25   \n",
+      "8   Forecast program/Other Saves-Saves Forecast Tr...     FY25   \n",
+      "9   Forecast program/Other Saves-Saves Forecast Tr...     FY25   \n",
+      "10  Forecast program/Other Saves-Saves Forecast Tr...     FY25   \n",
+      "11  Forecast program/Other Saves-Saves Forecast Tr...     FY25   \n",
+      "12  Forecast program/Other Saves-Saves Forecast Tr...     FY25   \n",
+      "13  Forecast program/Other Saves-Saves Forecast Tr...     FY25   \n",
+      "14  Forecast program/Other Saves-Saves Forecast Tr...     FY25   \n",
+      "15  Forecast program/Other Saves-Saves Forecast Tr...     FY25   \n",
+      "16  Forecast program/Other Saves-Saves Forecast Tr...     FY25   \n",
+      "17  Forecast program/Other Saves-Saves Forecast Tr...     FY25   \n",
+      "18  Forecast program/Other Saves-Saves Forecast Tr...     FY25   \n",
+      "19  Forecast program/Other Saves-Saves Forecast Tr...     FY25   \n",
+      "20    New Perm Position (within FRP) - Staff Drawdown     FY25   \n",
+      "21    New Perm Position (within FRP) - Staff Drawdown     FY25   \n",
+      "22    New Perm Position (within FRP) - Staff Drawdown     FY25   \n",
+      "23    New Perm Position (within FRP) - Staff Drawdown     FY25   \n",
+      "24    New Perm Position (within FRP) - Staff Drawdown     FY25   \n",
+      "25    New Perm Position (within FRP) - Staff Drawdown     FY25   \n",
+      "26    New Perm Position (within FRP) - Staff Drawdown     FY25   \n",
+      "27    New Perm Position (within FRP) - Staff Drawdown     FY25   \n",
+      "28    New Perm Position (within FRP) - Staff Drawdown     FY25   \n",
+      "29    New Perm Position (within FRP) - Staff Drawdown     FY25   \n",
+      "30    New Perm Position (within FRP) - Staff Drawdown     FY25   \n",
+      "31    New Perm Position (within FRP) - Staff Drawdown     FY25   \n",
+      "32    New Perm Position (within FRP) - Staff Drawdown     FY25   \n",
+      "\n",
+      "   Business Framework RTN Code Business Framework Business Framework Group  \\\n",
+      "0                          RTN                                               \n",
+      "1                          RTN                                               \n",
+      "2                          RTN                                               \n",
+      "3                          RTN                                               \n",
+      "4                          RTN                                               \n",
+      "5                          RTN                                               \n",
+      "6                          RTN                                               \n",
+      "7                          RTN                                               \n",
+      "8                          RTN                                               \n",
+      "9                          RTN                                               \n",
+      "10                         RTN                                               \n",
+      "11                         RTN                                               \n",
+      "12                         RTN                                               \n",
+      "13                         RTN                                               \n",
+      "14                         RTN                                               \n",
+      "15                         RTN                                               \n",
+      "16                         RTN                                               \n",
+      "17                         RTN                                               \n",
+      "18                         RTN                                               \n",
+      "19                         RTN                                               \n",
+      "20                         RTN                                               \n",
+      "21                         RTN                                               \n",
+      "22                         RTN                                               \n",
+      "23                         RTN                                               \n",
+      "24                         RTN                                               \n",
+      "25                         RTN                                               \n",
+      "26                         RTN                                               \n",
+      "27                         RTN                                               \n",
+      "28                         RTN                                               \n",
+      "29                         RTN                                               \n",
+      "30                         RTN                                               \n",
+      "31                         RTN                                               \n",
+      "32                         RTN                                               \n",
+      "\n",
+      "     Country GCB Emp. Type Hiring Source  FTE Start Month WPB      GBM CMB  \\\n",
+      "0   Country1   4       FTE      External    1  01/31/2025  0%  100.00%  0%   \n",
+      "1   Country1   4       FTE      External    1  01/31/2025  0%  100.00%  0%   \n",
+      "2   Country1   4       FTE      External    1  01/31/2025  0%  100.00%  0%   \n",
+      "3   Country1   6       FTE      External    1  01/31/2025  0%  100.00%  0%   \n",
+      "4   Country1   6       FTE      External    1  01/31/2025  0%  100.00%  0%   \n",
+      "5   Country1   6       FTE      External    1  01/31/2025  0%  100.00%  0%   \n",
+      "6   Country1   7       FTE      External  0.5  01/31/2025  0%  100.00%  0%   \n",
+      "7   Country2   4       FTE      External   -1  01/31/2025  0%  100.00%  0%   \n",
+      "8   Country2   4       FTE      External   -1  01/31/2025  0%  100.00%  0%   \n",
+      "9   Country2   4       FTE      External   -1  01/31/2025  0%  100.00%  0%   \n",
+      "10  Country2   4       FTE      External   -1  01/31/2025  0%  100.00%  0%   \n",
+      "11  Country2   6       FTE      External   -1  01/31/2025  0%  100.00%  0%   \n",
+      "12  Country2   6       FTE      External   -1  01/31/2025  0%  100.00%  0%   \n",
+      "13  Country2   6       FTE      External   -1  01/31/2025  0%  100.00%  0%   \n",
+      "14  Country2   6       FTE      External   -1  01/31/2025  0%  100.00%  0%   \n",
+      "15  Country2   6       FTE      External   -1  01/31/2025  0%  100.00%  0%   \n",
+      "16  Country2   6       FTE      External   -1  01/31/2025  0%  100.00%  0%   \n",
+      "17  Country2   7       FTE      External   -1  01/31/2025  0%  100.00%  0%   \n",
+      "18  Country2   8       FTE      External   -1  01/31/2025  0%  100.00%  0%   \n",
+      "19  Country2  na       FTE      External -0.3  01/31/2025  0%  100.00%  0%   \n",
+      "20  Country3   7       FTE      External    1  01/31/2025  0%  100.00%  0%   \n",
+      "21  Country3  na       FTE      External    1  01/31/2025  0%  100.00%  0%   \n",
+      "22  Country3  na       FTE      External    1  01/31/2025  0%  100.00%  0%   \n",
+      "23  Country6  GM       FTE      External    1  01/31/2025  0%  100.00%  0%   \n",
+      "24  Country6   3       FTE      External    1  01/31/2025  0%  100.00%  0%   \n",
+      "25  Country6   3       FTE      External    1  01/31/2025  0%  100.00%  0%   \n",
+      "26  Country6   6       FTE      External    1  01/31/2025  0%  100.00%  0%   \n",
+      "27  Country6   6       FTE      External    1  01/31/2025  0%  100.00%  0%   \n",
+      "28  Country6   6       FTE      External    1  01/31/2025  0%  100.00%  0%   \n",
+      "29  Country6   7       FTE      External    1  01/31/2025  0%  100.00%  0%   \n",
+      "30  Country6   7       FTE      External    1  01/31/2025  0%  100.00%  0%   \n",
+      "31  Country6   7       FTE      External    1  01/31/2025  0%  100.00%  0%   \n",
+      "32  Country6   7       FTE      External    1  01/31/2025  0%  100.00%  0%   \n",
+      "\n",
+      "   Diver   Entity Description  \n",
+      "0         Entity1   Example 1  \n",
+      "1         Entity1   Example 1  \n",
+      "2         Entity1   Example 1  \n",
+      "3         Entity1   Example 1  \n",
+      "4         Entity1   Example 1  \n",
+      "5         Entity1   Example 1  \n",
+      "6         Entity1   Example 1  \n",
+      "7         Entity2   Example 2  \n",
+      "8         Entity2   Example 2  \n",
+      "9         Entity2   Example 2  \n",
+      "10        Entity2   Example 2  \n",
+      "11        Entity2   Example 2  \n",
+      "12        Entity2   Example 2  \n",
+      "13        Entity2   Example 2  \n",
+      "14        Entity2   Example 2  \n",
+      "15        Entity2   Example 2  \n",
+      "16        Entity2   Example 2  \n",
+      "17        Entity2   Example 2  \n",
+      "18        Entity2   Example 2  \n",
+      "19        Entity2   Example 2  \n",
+      "20        Entity3   Example 3  \n",
+      "21        Entity3   Example 3  \n",
+      "22        Entity3   Example 3  \n",
+      "23        Entity6   Example 6  \n",
+      "24        Entity6   Example 6  \n",
+      "25        Entity6   Example 6  \n",
+      "26        Entity6   Example 6  \n",
+      "27        Entity6   Example 6  \n",
+      "28        Entity6   Example 6  \n",
+      "29        Entity6   Example 6  \n",
+      "30        Entity6   Example 6  \n",
+      "31        Entity6   Example 6  \n",
+      "32        Entity6   Example 6  \n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import math\n",
     "\n",
     "# Example source data\n",
     "data = {\n",
-    "    \"FTE\": [6.5, -12, 3],\n",
-    "    \"GM\": [0, 0, 0],\n",
-    "    \"MD\": [0, 0, 0],\n",
-    "    \"3\": [0, 0, 0],\n",
-    "    \"4\": [2.5, -4, 0],\n",
-    "    \"5\": [0, 0, 0],\n",
-    "    \"6\": [3, -6, 0],\n",
-    "    \"7\": [1, -1, 1],\n",
-    "    \"8\": [0, -1, 0],\n",
-    "    \"Entity\": [\"Entity1\", \"Entity2\", \"Entity3\"],\n",
-    "    \"Description\": [\"Example 1\", \"Example 2\", \"Example 3\"],\n",
-    "    \"Country\": [\"Country1\", \"Country2\", \"Country3\"],\n",
-    "    \"RTN\": [\"RTN 123 - Example\", \"RTN 456 - Sample\", \"RTN 789 - Test\"]\n",
+    "    \"FTE\": [6.5, -12.3, 3, 0, None, 10],\n",
+    "    \"Type\": [\"BC-TT\", \"Investments\", \"Saves\", \"Other\", \"Saves\", \"BC-TT\"],\n",
+    "    \"GM\": [0, 0, 0, 0, 0, 1],\n",
+    "    \"MD\": [0, 0, 0, 0, 0, 0],\n",
+    "    \"3\": [0, 0, 0, 0, 0, 2],\n",
+    "    \"4\": [2.5, -4, 0, 0, 0, 0],\n",
+    "    \"5\": [0, 0, 0, 0, 0, 0],\n",
+    "    \"6\": [3, -6, 0, 0, 0, 3],\n",
+    "    \"7\": [1, -1, 1, 0, 0, 4],\n",
+    "    \"8\": [0, -1.3, 0, 0, 0, 0],\n",
+    "    \"Entity\": [\"Entity1\", \"Entity2\", \"Entity3\", \"Entity4\", \"Entity5\", \"Entity6\"],\n",
+    "    \"Description\": [\"Example 1\", \"Example 2\", \"Example 3\", \"Example 4\", \"Example 5\", \"Example 6\"],\n",
+    "    \"Country\": [\"Country1\", \"Country2\", \"Country3\", \"Country4\", \"Country5\", \"Country6\"],\n",
+    "    \"RTN\": [\"RTN 123 - Example\", \"RTN 456 - Sample\", \"RTN 789 - Test\", \"RTN 101 - Case\", \"RTN 112 - Trial\", \"RTN 113 - Check\"]\n",
     "}\n",
     "\n",
     "source_df = pd.DataFrame(data)\n",
@@ -35,8 +182,10 @@
     "# Clean and convert FTE column\n",
     "source_df[\"FTE\"] = pd.to_numeric(source_df[\"FTE\"], errors=\"coerce\")\n",
     "\n",
-    "# Filter rows where FTE is valid and not blank\n",
-    "filtered_df = source_df[source_df[\"FTE\"].notnull() & source_df[\"FTE\"] != 0]\n",
+    "# Filter rows where FTE is valid and does not equal 0\n",
+    "filtered_df = source_df[\n",
+    "    source_df[\"FTE\"].notnull() & (source_df[\"FTE\"] != 0) & (source_df[\"Type\"].isin([\"BC-TT\", \"Investments\", \"Saves\"]))\n",
+    "]\n",
     "\n",
     "# Create the template dataframe with required columns\n",
     "template_columns = [\n",
@@ -51,7 +200,9 @@
     "for _, row in filtered_df.iterrows():\n",
     "    fte_value = row[\"FTE\"]\n",
     "    duplicate_fte = -1 if fte_value < 0 else 1  # Determine positive or negative FTE\n",
-    "    abs_fte = math.ceil(abs(fte_value))  # Round up FTE to the nearest whole number\n",
+    "    abs_fte = abs(fte_value)\n",
+    "    int_part = math.floor(abs_fte)  # Integer part of FTE\n",
+    "    fractional_part = abs_fte - int_part  # Fractional part of FTE\n",
     "\n",
     "    # Calculate GCB distribution\n",
     "    gcb_distribution = []\n",
@@ -59,17 +210,20 @@
     "        if not pd.isna(row[col]) and row[col] != 0:\n",
     "            gcb_distribution.extend([col] * abs(math.ceil(row[col])))\n",
     "\n",
-    "    # Ensure GCB distribution matches the FTE\n",
-    "    if len(gcb_distribution) > abs_fte:\n",
-    "        gcb_distribution = gcb_distribution[:abs_fte]\n",
-    "    elif len(gcb_distribution) < abs_fte:\n",
-    "        raise ValueError(f\"Mismatch: Unable to allocate GCB for {abs_fte} rows.\")\n",
+    "    # Ensure GCB distribution matches the FTE rows\n",
+    "    total_required_rows = int_part + (1 if fractional_part > 0 else 0)\n",
+    "    if len(gcb_distribution) < total_required_rows:\n",
+    "        gcb_distribution.extend([\"na\"] * (total_required_rows - len(gcb_distribution)))\n",
     "\n",
-    "    # Create rows in the template for each GCB value\n",
-    "    for gcb in gcb_distribution:\n",
+    "    # Create rows in the template\n",
+    "    for i in range(total_required_rows):\n",
+    "        current_fte = (\n",
+    "            fractional_part if i == total_required_rows - 1 and fractional_part > 0 else 1\n",
+    "        ) * duplicate_fte\n",
+    "\n",
     "        new_row = {\n",
     "            \"Big Grid Stack\": (\n",
-    "                \"New Perm Position (within FRP) - Staff Drawdown\" if duplicate_fte == 1\n",
+    "                \"New Perm Position (within FRP) - Staff Drawdown\" if current_fte > 0\n",
     "                else \"Forecast program/Other Saves-Saves Forecast Tracker\"\n",
     "            ),\n",
     "            \"AOP YEAR\": \"FY25\",\n",
@@ -77,11 +231,11 @@
     "            \"Business Framework\": \"\",\n",
     "            \"Business Framework Group\": \"\",\n",
     "            \"Country\": row[\"Country\"],\n",
-    "            \"GCB\": gcb,\n",
+    "            \"GCB\": gcb_distribution[i],\n",
     "            \"Emp. Type\": \"FTE\",\n",
     "            \"Hiring Source\": \"External\",\n",
-    "            \"FTE\": duplicate_fte,\n",
-    "            \"Start Month\": \"01/31/2025\" if pd.to_datetime(row[\"FTE\"], errors=\"coerce\").year == 2024 else row[\"FTE\"],\n",
+    "            \"FTE\": current_fte,\n",
+    "            \"Start Month\": \"01/31/2025\",  # Example logic for Start Month, modify as needed\n",
     "            \"WPB\": \"0%\",\n",
     "            \"GBM\": \"100.00%\",\n",
     "            \"CMB\": \"0%\",\n",
